--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -33,4 +33,4 @@
 
 <script src="assets/js/fetchchatstatus.js"></script>
 <script src="assets/js/fetchmsg.js"></script>
-</script>
+<script src="assets/js/cookie.js"></script>
