JQuery UI update

--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/chatbotstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <header>
     <div id="chatheader">
@@ -12,6 +15,9 @@
     </div>
 </header>
 <body>
+    <div class="chatspace">
+
+    </div>
     <div id="chat">
         <div class="messages">
             <div class="messagescontent" id="storemsg"></div>
