--- a/ElevateChatBot.UI/assets/Jquery/ChatbotJquery.html
+++ b/ElevateChatBot.UI/assets/Jquery/ChatbotJquery.html
@@ -1,6 +1,13 @@
 <div id="chatbotheader">
-    <h1>Elevate</h1>
+    <div class="flexcontainer" id="options">
+        <h1>Elevate</h1>
+        <span><i class="fa fa-times-circle" aria-hidden="true"></i></span>
+    </div>
     
+    <h2>Here to help </h2>
+    <figure class="chaticon">
+        <i class="fa fa-comments" aria-hidden="true"></i>
+    </figure>
 </div>
 <div class="chatspace">
 
@@ -21,3 +28,7 @@
         </div>
     </form>
 </div>
+
+<script src="assets/js/fetchchatstatus.js"></script>
+<script src="assets/js/cookie.js"></script>
+<script src="assets/js/fetchmsg.js"></script>
