--- a/ElevateChatBot.UI/index.html
+++ b/ElevateChatBot.UI/index.html
@@ -10,8 +10,9 @@
     <h1>Elevate</h1>
 </header>
 <body>
-    
-    <div id="chatbotJ"></div>
+    <!-- code commented for now until js is done -->
+    <!-- <div id="chatbotJ"></div> -->
+    <div id="chatbotbuttonJ"></div>
 </body>
 <footer>
 
@@ -19,5 +20,6 @@
 <script>
     $(document).ready(function(){
       $("#chatbotJ").load("assets/Jquery/chatbotJquery.html");
+      $("#chatbotbuttonJ").load("assets/Jquery/chatbotjquerybutton.html");
     })
 </script>
