--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -17,7 +17,8 @@
 <body>
     <div id="chat">
         <div class="messages">
-            <div class="messagescontent" id="storemsg"></div>
+            <div class="messagescontent" id="storemsg">
+            </div>
         </div>
         
     </div>
