--- a/ElevateChatBot.UI/assets/Jquery/ChatbotJquery.html
+++ b/ElevateChatBot.UI/assets/Jquery/ChatbotJquery.html
@@ -1,7 +1,7 @@
 <div id="chatbotheader">
     <div class="flexcontainer" id="options">
         <h1>Elevate</h1>
-        <span><i class="fa fa-times-circle" aria-hidden="true"></i></span>
+        <span><i class="fa fa-times-circle" aria-hidden="true" onclick="closechat()"></i></span>
     </div>
     
     <h2>Here to help </h2>
