--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -25,7 +25,7 @@
     <div id="inputspace">
         <form action="" id="sendmsgform">
             <div class="centercontents">
-                <input type="text" name="question" id="question"  >
+                <input type="text" name="question" id="question" autocomplete="off"  >
             </div>
             <div class="centercontents">
                 <input type="submit" id="sendbtn" >
