--- a/ElevateChatBot.UI/index.html
+++ b/ElevateChatBot.UI/index.html
@@ -8,14 +8,22 @@
 </head>
 <header>
     <h1>Elevate</h1>
+    <h2>Your skills, knowledge & potential</h2>
 </header>
 <body>
-    <div id="message">
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
+    <div id="courses">
+        <h1>Select a theme, complete the course, give feedback, and check your BADGES page to confirm your achievements.</h1>
+        <div class="flexcontainer">
+            <img src="assets/img/digital-literacy.png" alt="">
+            <img src="assets/img/employability.png" alt="">
+            <img src="assets/img/global.png" alt="">
+            <img src="assets/img/health-wellbeing.png" alt="">
+            <img src="assets/img/industry.png" alt="">
+            <img src="assets/img/leadership-management.png" alt="">
+            <img src="assets/img/research.png" alt="">
+            <img src="assets/img/sustainability.png" alt="">
+        </div>
     </div>
-    
     <div id="chatbotJ" class="disabled"></div>
     <div id="chatbotbuttonJ" onclick="openchat()"></div>
 </body>
