--- a/ElevateChatBot.UI/index.html
+++ b/ElevateChatBot.UI/index.html
@@ -12,16 +12,46 @@
 </header>
 <body>
     <div id="courses">
-        <h1>Select a theme, complete the course, give feedback, and check your BADGES page to confirm your achievements.</h1>
-        <div class="flexcontainer">
-            <img src="assets/img/digital-literacy.png" alt="">
-            <img src="assets/img/employability.png" alt="">
-            <img src="assets/img/global.png" alt="">
-            <img src="assets/img/health-wellbeing.png" alt="">
-            <img src="assets/img/industry.png" alt="">
-            <img src="assets/img/leadership-management.png" alt="">
-            <img src="assets/img/research.png" alt="">
-            <img src="assets/img/sustainability.png" alt="">
+        <div class="coursesheading centercontents">
+            <h1>Select a theme, complete the course, give feedback, and check your BADGES page to confirm your achievements.</h1>
+        </div>
+        <div>
+            <div class="centercontents top">
+                <div class="item">
+                    <img src="assets/img/digital-literacy.png" alt="">
+                    <p>digital literacy</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/employability.png" alt="">
+                    <p>employability</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/global.png" alt="">
+                    <p>global</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/health-wellbeing.png" alt="">
+                    <p>wellbeing</p>
+                </div>
+            </div>
+            <div class="centercontents">
+                <div class="item">
+                    <img src="assets/img/industry.png" alt="">
+                    <p>industry</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/leadership-management.png" alt="">
+                    <p>leadership</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/research.png" alt="">
+                    <p>research</p>
+                </div>
+                <div class="item">
+                    <img src="assets/img/sustainability.png" alt="">
+                    <p>sustainability</p>
+                </div>
+            </div>
         </div>
     </div>
     <div id="chatbotJ" class="disabled"></div>
