--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -7,7 +7,14 @@
 </head>
 <header>
     <div id="chatheader">
-        <h1>Elevate</h1>
+        <div id="options" class="flexcontainer">
+            <h1>Elevate</h1>
+            <a href="index.html">
+                <i class="fa fa-home" aria-hidden="true"></i>
+            </a>
+            
+        </div>
+        
         <h2>Here to help</h2>
         <figure class="chaticon">
             <i class="fa fa-comments" aria-hidden="true"></i>
