--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -32,11 +32,15 @@
     <div id="inputspace">
         <form action="" id="sendmsgform">
             <div class="centercontents">
-                <input type="text" name="question" id="question" autocomplete="off"  >
+                <input type="text" name="question" id="question" autocomplete="off" maxlength="200" >
             </div>
             <div class="centercontents">
-                <input type="submit" id="sendbtn" >
+                <button type="submit" id="sendbtn">
+                    <span>Send</span>
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                </button>
             </div>
+            
         </form>
 
     </div>
