--- a/ElevateChatBot.UI/index.html
+++ b/ElevateChatBot.UI/index.html
@@ -80,6 +80,7 @@
     </div>
     <div id="chatbotJ" class="disabled"></div>
     <div id="chatbotbuttonJ" onclick="openchat()"></div>
+    <div id="cookiepopup"></div>
 </body>
 <footer>
 
@@ -88,7 +89,9 @@
     $(document).ready(function(){
       $("#chatbotJ").load("assets/Jquery/chatbotJquery.html");
       $("#chatbotbuttonJ").load("assets/Jquery/chatbotJquerybutton.html");
-    })
+      $("#cookiepopup").load("assets/Jquery/cookiepopJquery.html");
+
+    });
 </script>
 <script src="assets/js/openchat.js"></script>
 
