--- a/ElevateChatBot.UI/Chatbot.html
+++ b/ElevateChatBot.UI/Chatbot.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="assets/chatbotstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <header>
     <div id="chatheader">
@@ -44,8 +45,17 @@
         </form>
 
     </div>
+
+    <div id="cookiepopup"></div>
+
 </body>
 
 <script src="assets/js/fetchchatstatus.js"></script>
 <script src="assets/js/fetchmsg.js"></script>
 <script src="assets/js/cookie.js"></script>
+
+<script>
+    $(document).ready(function(){
+      $("#cookiepopup").load("assets/Jquery/cookiepopJquery.html");
+    });
+</script>
