--- a/ElevateChatBot.UI/index.html
+++ b/ElevateChatBot.UI/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="banner">
-        <h2><i class="fa fa-certificate" aria-hidden="true"></i> Use are new chatbot <a href="Chatbot.html">HERE</a>! <i class="fa fa-certificate" aria-hidden="true"></i></h2>
+        <h2><i class="fa fa-certificate" aria-hidden="true"></i> Use our new chatbot <a href="Chatbot.html">HERE</a>! <i class="fa fa-certificate" aria-hidden="true"></i></h2>
     </div>
     <div id="chatbotJ" class="disabled"></div>
     <div id="chatbotbuttonJ" onclick="openchat()"></div>
